changed tabs name

--- a/index.html
+++ b/index.html
@@ -23,24 +23,24 @@
             <i class="material-icons">menu</i>
             </a>
             <ul class="tabs tabs-transparent">
-                <li class="tab"><a href="#test1">Test 1</a></li>
-                <li class="tab"><a class="active" href="#test2">Test 2</a></li>
-                <li class="tab"><a href="#test4">Test 4</a></li>
+                <li class="tab"><a href="#test1">Posts</a></li>
+                <li class="tab"><a class="active" href="#test2">Lab-Works</a></li>
+                <li class="tab"><a href="#test4">Friends</a></li>
             </ul>
         </div>
     </nav>
     <ul class="sidenav" id="mobile-nav">
         <li>
-            <a target="_blank" class="title white-text" href="https://github.com/e-Luminous/ui">
+            <a target="_blank" class="title" href="https://github.com/e-Luminous/ui">
             <i class="fab fa-github"></i> GitHub
             </a>
         </li>
     </ul>
     </header>
 
-    <div id="test1" class="col s12 tabDivs">Test 1</div>
-    <div id="test2" class="col s12 tabDivs">Test2</div>
-    <div id="test4" class="col s12 tabDivs">Test 4</div>
+    <div id="test1" class="col s12 tabDivs">Posts</div>
+    <div id="test2" class="col s12 tabDivs">Lab-Works</div>
+    <div id="test4" class="col s12 tabDivs">Friends</div>
 
     <script src="https://code.jquery.com/jquery-3.4.1.min.js" integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
     <script src="src/app/materialize.min.js"></script>
