--- a/index.html
+++ b/index.html
@@ -44,6 +44,6 @@
 
     <script src="https://code.jquery.com/jquery-3.4.1.min.js" integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
     <script src="src/app/materialize.min.js"></script>
-    <script src="src/app/_init_.js"></script>
+    <script src="src/app/init.js"></script>
 </body>
 </html>
