added SWAG components

--- a/backup.html
+++ b/backup.html
@@ -98,7 +98,7 @@
                                     <form>
                                     <div class="input-field">
                                         <i class="material-icons prefix">account_circle</i>
-                                        <input type="text" id="autocomplete-input" class="autocomplete">
+                                        <textarea id="textarea1" class="materialize-textarea"></textarea>
                                         <label for="textarea1">Share something with your class</label>
                                     </div>
                                     <p class="right-align">
@@ -117,72 +117,16 @@
                         <div class="col s12 l12">
                             <div class="card hoverable">
                                 <div class="card-content">
-                                    <p class="center-align"><b>Experiment 01 : </b>
-                                        Determine the source of falling objects by melting marble and measuring distance and time</p>
-                                    <br>
                                     <form>
-                                        <table class="responsive-table">
-                                            <thead>
-                                                <tr>
-                                                    <th>Distance (S) meter</th>
-                                                    <th>Average Time (t) second</th>
-                                                    <th>Average Time Square (t<sup>2</sup>)</th>
-                                                    <th>S/t<sup>2</sup> (ms<sup>-2</sup>)</th>
-                                                </tr>
-                                            </thead>
-                                    
-                                            <tbody>
-                                                <tr>
-                                                    <td contenteditable>0</td>
-                                                    <td contenteditable>0</td>
-                                                    <td contenteditable>0</td>
-                                                    <td contenteditable>0</td>
-                                                </tr>
-                                            </tbody>
-                                        </table><br>
-                                        <p class="right-align">
-                                            <a class="waves-effect waves-light btn transparent grey-text text-darken-2">Cancel</a>
-                                            &nbsp; <a class="waves-effect waves-light btn materialize-indigo">Save</a>
-                                        </p>
-                                    </form>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                    <!--End-->
-
-                    <!--Start-->
-                    <div class="row">
-                        <div class="col s12 l12">
-                            <div class="card hoverable">
-                                <div class="card-content">
-                                    <p class="center-align"><b>Experiment 01 : </b>
-                                        Determine the source of falling objects by melting marble and measuring distance and time</p>
-                                    <br>
-                                    <form>
-                                        <table class="responsive-table">
-                                            <thead>
-                                                <tr>
-                                                    <th>Distance (S) meter</th>
-                                                    <th>Average Time (t) second</th>
-                                                    <th>Average Time Square (t<sup>2</sup>)</th>
-                                                    <th>S/t<sup>2</sup> (ms<sup>-2</sup>)</th>
-                                                </tr>
-                                            </thead>
-                                    
-                                            <tbody>
-                                                <tr>
-                                                    <td contenteditable>0</td>
-                                                    <td contenteditable>0</td>
-                                                    <td contenteditable>0</td>
-                                                    <td contenteditable>0</td>
-                                                </tr>
-                                            </tbody>
-                                        </table><br>
-                                        <p class="right-align">
-                                            <a class="waves-effect waves-light btn transparent grey-text text-darken-2">Cancel</a>
-                                            &nbsp; <a class="waves-effect waves-light btn materialize-indigo">Save</a>
-                                        </p>
+                                    <div class="input-field">
+                                        <i class="material-icons prefix">account_circle</i>
+                                        <textarea id="textarea1" class="materialize-textarea"></textarea>
+                                        <label for="textarea1">Share something with your class</label>
+                                    </div>
+                                    <p class="right-align">
+                                        <a class="waves-effect waves-light btn transparent grey-text text-darken-2">Cancel</a>
+                                        &nbsp; <a class="waves-effect waves-light btn materialize-indigo">Post</a>
+                                    </p>
                                     </form>
                                 </div>
                             </div>
