login-page-stapper-design

--- a/home.html
+++ b/home.html
@@ -19,7 +19,8 @@
            
             <ul class="right hide-on-med-and-down">
                 <li>
-                    <a class="btn-floating btn-small dropdown-button waves-effect waves-blue materialize-indigo"
+                    <a class="btn-floating btn tooltipped btn-small dropdown-button waves-effect waves-blue materialize-indigo"
+                    data-position="left" data-tooltip="class"
                         href="#" data-activates="class-dropdown">
                         <i class="material-icons">add</i>
                         <i class="right hide-on-med-and-down"></i>
@@ -144,7 +145,7 @@
         </div>
     </nav>
     <!-- nav close -->
-    <div class="back"></div>
+   
 
     <div class="container" id="varsity" style="mask-border-slice: 10px">
         <h2 class="center">eLuminous</h2>
