--- a/classrooms.html
+++ b/classrooms.html
@@ -121,8 +121,8 @@
                                     <p class="center-align"><b>Experiment 01 : </b>
                                         Determine the source of falling objects by melting marble and measuring distance and time</p>
                                     <br>
-                                    <form>
-                                        <table class="responsive-table">
+                                    <form id="exp01Form">
+                                        <table id="exp01Table" class="responsive-table">
                                             <thead>
                                                 <tr>
                                                     <th>Distance (S) meter</th>
@@ -144,7 +144,7 @@
                                         <p class="right-align">
                                             <a class="waves-effect waves-light btn transparent grey-text text-darken-2">Cancel</a>
                                             &nbsp; <a id="1" class="tblButtonAdder waves-effect waves-light btn yellow darken-4">+ New</a>
-                                            &nbsp; <a class="waves-effect waves-light btn materialize-indigo">Save</a>
+                                            &nbsp; <button type="submit" class="waves-effect waves-light btn materialize-indigo white-text">Save</button>
                                         </p>
                                     </form>
                                 </div>
@@ -161,8 +161,8 @@
                                     <p class="center-align bengaliTextHeader"><b>পরীক্ষণ নং ০২ঃ </b>
                                         বয়েলের সূত্র যাচাইকরণ</p>
                                     <br>
-                                    <form>
-                                        <table class="responsive-table">
+                                    <form id="exp02Form">
+                                        <table id="exp02Table" class="responsive-table">
                                             <thead>
                                                 <tr class="bengaliText">
                                                     <th>চাপ (P)</th>
@@ -178,7 +178,11 @@
                                     
                                             <tbody id="exp02TBody">
                                                 <tr>
-                                                    <td><p> <label> <input checked name="group1" type="radio" /> <span>বায়ু মন্ডলের চাপ</span> </label> </p> <p> <label> <input name="group1" type="radio" /> <span>বায়ু মন্ডলের চাপের বেশী</span> </label> </p> <p> <label> <input name="group1" type="radio" /> <span>বায়ু মন্ডলের চাপের কম</span> </label> </p></td>
+                                                   <td>
+                                                       <p> <label> <input value="0" checked name="group1" type="radio" /> <span>বায়ু মন্ডলের চাপ</span> </label> </p> 
+                                                       <p> <label> <input value="1" name="group1" type="radio" /> <span>বায়ু মন্ডলের চাপের বেশী</span> </label> </p> 
+                                                       <p> <label> <input value="2" name="group1" type="radio" /> <span>বায়ু মন্ডলের চাপের কম</span> </label> </p>
+                                                   </td>
                                                     <td contenteditable>0</td>
                                                     <td contenteditable>0</td>
                                                     <td contenteditable>0</td>
@@ -192,7 +196,7 @@
                                         <p class="right-align">
                                              <a class="waves-effect waves-light btn transparent grey-text text-darken-2">Cancel</a>
                                              &nbsp; <a id="2" class="tblButtonAdder waves-effect waves-light btn yellow darken-4">+ New</a>
-                                             &nbsp; <a class="waves-effect waves-light btn materialize-indigo">Save</a>
+                                             &nbsp; <button type="submit" class="waves-effect waves-light btn materialize-indigo white-text">Save</button>
                                          </p>
                                     </form>
                                 </div>
